fixed button alignment issue

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -57,9 +57,6 @@
         font-size: 16px;
         margin-left: 22px;
     }
-    .btn, .btn-lg, .btn-success {
-        margin-right: 22px;
-    }
 }
 
 /* end of media query*/
