--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,9 +1,3 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-@media (max-width: 767px){
-    .btn, .btn-md, .btn-primary, .btn-success {
-        margin-left: 22px;
-    }
-}
